[Priyanshu]: Initialze Phase 10 - Quality Testing (Jacoco) and implement Rabit mq, Docker